Fixed read only iteration and new password page positioning that was broken in commit 429bead

--- a/webapp/src/main/webapp/static/css/structure.css
+++ b/webapp/src/main/webapp/static/css/structure.css
@@ -147,6 +147,12 @@ img {
   padding: 1em 2em 1em 1.5em;
   border-left: 1px solid #A6C9E2;
   outline:none;
+  position: absolute;
+  top: 6em;
+  bottom: 2.5em;
+  left: 0;
+  right: 0;
+  overflow: auto;
 }
 
 #layoutEmptyDiv {
